<resources>
    <string name="app_name">Bursary Admin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="photo_of_birth_certificate">Photo of Birth Certificate</string>
    <string name="photo_of_fee_structure">Photo of Fee Structure</string>
    <string name="photo_of_report_form">Photo Of Report Form</string>
    <string name="apply">Apply</string>
    <string name="select_gender">Select Gender</string>
    <string name="new_application">New Application</string>
    <string name="my_applications">My Applications</string>
    <string name="photo_of_national_id">Photo Of National Id</string>
    <string name="select">Select</string>
    <string name="select_year">Select Year</string>
    <string name="select_month">Select Month</string>
    <string name="select_day">Select Day</string>
    <string name="select_id_type">Select Id Type</string>
    <string name="select_id_number">Select Id Number</string>
    <string name="select_date_of_birth">Select Date Of Birth</string>
    <string name="select_national">Nationality</string>
    <string name="application_id">1234567890</string>
    <string name="application_date">04/03/2022</string>
    <string name="status">Status</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>
    <string name="application_status">Application Status</string>
    <string name="user_applications">User Applications</string>
    <string name="show_applications_by_gender">Show applications by gender</string>
    <string name="title_activity_admin">Bursary Admin</string>
    <string name="title_activity_user">Bursary User</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="dob">Date of birth</string>
    <string name="admission">Admission Number</string>
    <string name="institution">Institution</string>
    <string name="course">Course</string>
    <string name="year">Year</string>
    <string name="institution_name">Institution Name</string>
    <string name="course_name">Course Name</string>
    <string name="year_name">Year Name</string>
    <string name="institution_number">0123456789</string>
    <string name="course_number">0123456789</string>
    <string name="institution_details">Institution Details</string>
    <string name="bank_details">Bank Details</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="account_name">Account Name</string>
    <string name="branch">Branch</string>
    <string name="branch_code">Branch Code</string>
    <string name="bank_number">0123456789</string>
    <string name="account_number_name">0123456789</string>
    <string name="residence">Residence</string>
    <string name="district">District</string>
    <string name="sub_county">Sub County</string>
    <string name="village">Village</string>
    <string name="division">Division</string>
    <string name="location">Location</string>
    <string name="ward">Ward</string>
    <string name="constituency">Constituency</string>
    <string name="county">County</string>
    <string name="sub_location">Sub Location</string>
    <string name="student_details">Student Details</string>
    <string name="id_image">ID Image</string>
    <string name="birth_certificate_image">Birth Certificate Image</string>
    <string name="fee_structure_image">Fee Structure Image</string>
    <string name="report_form_image">Report Form Image</string>
    <string name="application_details">Application Details</string>
    <string name="attached_documents">Attached Documents</string>

    <string name="admin_options">Admin Options</string>

    <string name="menu_subsequent_application">Subsequent Application</string>
</resources>