<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/back_2"
    android:elevation="10dp"
    android:layout_margin="5dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/applicationId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:text="@string/application_id"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/green"
        android:textStyle="bold" />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textStyle="bold"
        android:layout_toEndOf="@+id/applicationId"
        android:text="@string/application_date"
        android:padding="5dp"
        android:id="@+id/applicationDate"
        android:layout_margin="10dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/applicationStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/applicationDate"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:text="@string/pending"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="#AF0202"
        android:textStyle="bold" />
</RelativeLayout>